[gd_scene load_steps=31 format=3 uid="uid://ct0tql2yu45s"]

[ext_resource type="Script" uid="uid://dr31tohgt4630" path="res://Scene/House/house.gd" id="1_4d6p6"]
[ext_resource type="PackedScene" uid="uid://42cpyid1ir02" path="res://Objects/Player/player.tscn" id="1_al4dt"]
[ext_resource type="Script" uid="uid://ckpag1a30whqd" path="res://Enum/house_props_enum.gd" id="2_4d6p6"]
[ext_resource type="PackedScene" uid="uid://df0fd1ase0xl4" path="res://System/QuestSystem/quest_system.tscn" id="4_3d0we"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0awj2"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_al4dt"]
sky_material = SubResource("ProceduralSkyMaterial_0awj2")

[sub_resource type="Environment" id="Environment_lxeq3"]
background_mode = 2
sky = SubResource("Sky_al4dt")
ambient_light_source = 1
tonemap_mode = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_4d6p6"]
size = Vector3(20, 1, 20)

[sub_resource type="PlaneMesh" id="PlaneMesh_al4dt"]
size = Vector2(20, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_lxeq3"]
size = Vector3(1, 10, 5)

[sub_resource type="BoxMesh" id="BoxMesh_al4dt"]
size = Vector3(1, 10, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_3d0we"]
size = Vector3(10, 10, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lxeq3"]
size = Vector3(10, 10, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_53t7d"]
size = Vector3(20, 10, 1)

[sub_resource type="BoxMesh" id="BoxMesh_4d6p6"]
size = Vector3(20, 10, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_dl7y5"]
size = Vector3(1, 10, 20)

[sub_resource type="BoxMesh" id="BoxMesh_3d0we"]
size = Vector3(1, 10, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_rv5ty"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_53t7d"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_pv2rd"]
size = Vector3(10, 10, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_al4dt"]
size = Vector3(1, 2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_dl7y5"]
size = Vector3(1, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0p06j"]
size = Vector3(1.5, 1, 3)

[sub_resource type="BoxMesh" id="BoxMesh_xx5km"]
size = Vector3(1.5, 1, 3)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lxeq3"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4d6p6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xx5km"]
size = Vector3(2, 3, 1)

[sub_resource type="BoxMesh" id="BoxMesh_pw7id"]
size = Vector3(2, 3, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4d6p6"]
height = 0.5
radius = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_3d0we"]
top_radius = 0.2
bottom_radius = 0.2
height = 0.5

[node name="House" type="Node3D"]
script = ExtResource("1_4d6p6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lxeq3")

[node name="HouseModel" type="StaticBody3D" parent="."]

[node name="Floor" type="CollisionShape3D" parent="HouseModel"]
shape = SubResource("BoxShape3D_4d6p6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HouseModel/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("PlaneMesh_al4dt")
skeleton = NodePath("../..")

[node name="Enter1" type="CollisionShape3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 7.5)
shape = SubResource("BoxShape3D_lxeq3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HouseModel/Enter1"]
mesh = SubResource("BoxMesh_al4dt")

[node name="Enter2" type="CollisionShape3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 7.5)
shape = SubResource("BoxShape3D_lxeq3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HouseModel/Enter2"]
mesh = SubResource("BoxMesh_al4dt")

[node name="Wall1" type="CollisionShape3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 5.5)
shape = SubResource("BoxShape3D_3d0we")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HouseModel/Wall1"]
mesh = SubResource("BoxMesh_lxeq3")

[node name="Wall2" type="CollisionShape3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 5.5)
shape = SubResource("BoxShape3D_3d0we")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HouseModel/Wall2"]
mesh = SubResource("BoxMesh_lxeq3")

[node name="Wall3" type="CollisionShape3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.5)
shape = SubResource("BoxShape3D_53t7d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HouseModel/Wall3"]
mesh = SubResource("BoxMesh_4d6p6")

[node name="Wall4" type="CollisionShape3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)
shape = SubResource("BoxShape3D_dl7y5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HouseModel/Wall4"]
mesh = SubResource("BoxMesh_3d0we")

[node name="Wall5" type="CollisionShape3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)
shape = SubResource("BoxShape3D_dl7y5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HouseModel/Wall5"]
mesh = SubResource("BoxMesh_3d0we")

[node name="Ceiling" type="CollisionShape3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.5, 0)
shape = SubResource("BoxShape3D_rv5ty")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HouseModel/Ceiling"]
mesh = SubResource("BoxMesh_53t7d")

[node name="NoEscape" type="CollisionShape3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10.5)
shape = SubResource("BoxShape3D_pv2rd")

[node name="Enter Light" type="SpotLight3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 5.066897, 8.487261)
light_energy = 0.5
spot_range = 8.0

[node name="RoomLight" type="SpotLight3D" parent="HouseModel"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 5.066897, -1.8633684)
light_energy = 0.5
spot_range = 10.0
spot_angle = 80.0

[node name="Player" parent="." instance=ExtResource("1_al4dt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 3.0139074)

[node name="Props" type="StaticBody3D" parent="."]
collision_layer = 5

[node name="Fridge" type="CollisionShape3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9144282, 1.5, -6.945459)
shape = SubResource("BoxShape3D_al4dt")
script = ExtResource("2_4d6p6")
object_type = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Props/Fridge"]
mesh = SubResource("BoxMesh_dl7y5")

[node name="Bed" type="CollisionShape3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 1, -7)
shape = SubResource("BoxShape3D_0p06j")
script = ExtResource("2_4d6p6")
object_type = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="Props/Bed"]
mesh = SubResource("BoxMesh_xx5km")

[node name="RentCollector" type="CollisionShape3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 11)
shape = SubResource("CapsuleShape3D_lxeq3")
script = ExtResource("2_4d6p6")
object_type = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Props/RentCollector"]
mesh = SubResource("CapsuleMesh_4d6p6")

[node name="Door" type="CollisionShape3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 9.5)
shape = SubResource("BoxShape3D_xx5km")
script = ExtResource("2_4d6p6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Props/Door"]
mesh = SubResource("BoxMesh_pw7id")

[node name="CannedFood" type="CollisionShape3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.0291343, 1.572173, -5.4982667)
shape = SubResource("CylinderShape3D_4d6p6")
script = ExtResource("2_4d6p6")
object_type = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Props/CannedFood"]
mesh = SubResource("CylinderMesh_3d0we")

[node name="QuestSystem" parent="." instance=ExtResource("4_3d0we")]

[connection signal="player_has_finish_eating" from="Player" to="." method="player_has_finish_eating_food"]
[connection signal="player_interacted_with_a_props" from="Player" to="." method="player_interact_with_props"]
